[package]
name = "portector"
version = "0.1.0"
authors = ["Chad Baxter <cbax@doslabelectronics.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
iptables = "0.4.3"
serde = "1.0.126"
serde_derive = "1.0.126"
sled = "0.34.7"
snap = "1.0.5"
toml = "0.5"
